# advent-of-code

./: Cargo.toml  Justfile  README.md
2015/: Cargo.toml  README.md
2015/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
2018/: Cargo.toml  README.md
2018/src/: day01.rs  lib.rs
2021/: Cargo.toml  README.md
2021/input/: day01.txt
2021/scripts/: templates.sh
2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day22.rs  day23.rs  day24.rs  day25.rs  generate.rs  lib.rs
2021/templates/: bin.rs.txt  lib.rs.txt
2022/: Cargo.toml  README.md
2022/benches/: day06.rs
2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day17.rs  day20.rs  day24.rs  day25.rs
2023/: Cargo.toml  README.md
2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day10.rs  day23.rs
2024/: Cargo.toml  bacon.toml
2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day08.rs  day11.rs  day14.rs  day16.rs  day25.rs
common/: Justfile
common/src/: generate.rs  grid.rs  lib.rs
template/: cookiecutter.json
template/{{cookiecutter.year}}/: Cargo.toml  Justfile  README.md
(+25 files in other folders)
