[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"
authors = [
  "Manuel Hutter (https://github.com/mhutter)"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
common = { path = "../common" }
env_logger = "0.10.0"
log = "0.4.17"

[dev-dependencies]
criterion = "0.4.0"

[profile.release]
debug = true

[[bench]]
name = "day06"
harness = false
